[metadata]
name = uuparser
version = 2.3
description = A transition-based parser for Universal Dependencies with BiLSTM word and character representations.
https://github.com/UppsalaNLP/uuparser
license = Apache
author = Uppsala NLP group
author_email = miryam.de_lhoneux@lingfil.uu.se
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    nlp
    parsing

[options]
packages = find:
include_package_data=True
python_requires = >= 3.6
install_requires =
    dynet
    h5py
    loguru
    numpy

[options.entry_points]
console_scripts =
    uuparser = uuparser.parser:main